--- a/icongen.html
+++ b/icongen.html
@@ -19,18 +19,22 @@
             justify-content: center;
             font-size: 16px;
         }
+		
+		body {
+			background: black;
+		}
 
         i {
             font-size: 20rem;
-            color: rgb(0, 78, 194);
-            -webkit-text-stroke: 5px black;
+            color: rgb(255, 196, 0);
+            -webkit-text-stroke: 5px white;
         }
     </style>
 </head>
 
 <body>
 
-    <i class="fa-solid fa-car-side"></i>
+    <i class="fa-solid fa-file-code"></i>
 
 </body>
 
